--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
     "react-map-gl": "^5.2.3",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "reset-css": "^5.0.1",
     "styled-components": "^5.0.1"
   },
