--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-html-parser": "^2.0.2",
     "react-map-gl": "^5.2.3",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
