--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "mapbox-gl": "^1.12.0",
+    "mapboxgl-spiderifier": "^1.0.9",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
     "react-html-parser": "^2.0.2",
-    "react-map-gl": "^5.2.3",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
