--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@urbica/react-map-gl": "^1.14.2",
+    "@urbica/react-map-gl-cluster": "^0.2.0",
     "axios": "^0.19.2",
-    "mapbox-gl": "^1.12.0",
-    "mapboxgl-spiderifier": "^1.0.9",
-    "moment": "^2.24.0",
+    "mapbox-gl": "^1.13.0",
+    "moment": "^2.29.1",
     "react": "^16.13.0",
-    "react-countup": "^4.3.3",
+    "react-content-loader": "^5.1.4",
     "react-dom": "^16.13.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "reset-css": "^5.0.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "supercluster": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
